@@ -8,15 +8,18 @@ DIST deblob-3.6 108747 SHA256 93df902f141fe72e9fb15b9acde2b2cb35f4632844d9073a94
 DIST deblob-check-3.6 477608 SHA256 d0e0e90d766bc474fadfd91b83ccff74bf614cb4d31fab7d60d62b28ba4a90b9 SHA512 b4c152a1b5f20c9e46b0a7c7c76fde531798b7c135757cd6908b793825868cd8f2c4e3d5d5e1f8818e2e989fa344543d5799e0151e3001fafd00faaf97c65512 WHIRLPOOL 7fc07416bd7d5f278854272c25ea30455aed21ec75a6613fbac13751b66a21d131b1820e55f15776f61d6bcba377ef7ef5d49d2bfc964458d5af6c144deba284
 DIST genpatches-3.6-3.base.tar.bz2 25594 SHA256 42fd437a7cb714958dec91091b28f18654bfd216d997b9b567c6f9c8a28162f5 SHA512 13c0288d3215e519bc85403df71704ac5dbe2b26e1a8d9d4804304346a773533de839e09660e9224ced0651f3a15788d72860f912a60d39ad54420e1e29a4db0 WHIRLPOOL 24ae4811375dd17f2ddf434b2e57efcd212943abc4505d9baa94b1b02570a7fde325845e508a21ea390c1915cdd91e6a70386f2b599a912398902ac8d93e0b71
 DIST genpatches-3.6-3.extras.tar.bz2 17029 SHA256 7e22574a6618fbb2eade0610fd130a06a322891f109d5ad79b1b8674da5321c8 SHA512 243ac5d7b78e0e308cfb5536439eb6da01f46bebc1a549c61eb9cb0b1199ccabfad2a7d6186a3b1387417dc40082fc931d37d07ed31bb0e78a0e9afc0e4bf655 WHIRLPOOL 71f32176b12b1b08450854afc52e603ba687628a21d18b1ffb83063cd5db159e53b729901085b57dd969fcf731f3ebdb191a1015c6c98bb1a6015f965d23e543
+DIST genpatches-3.6-4.base.tar.bz2 62335 SHA256 dc72b6c3c4a025f7a1090e8d479ea9a5279584932c34c888920cc65e47f972a7 SHA512 030cd199a872f3185d03f22062cf162ef0d7468733c2abbf321044f75d36f0f3fb52c96020ebbc53f3570af7c97a9847dfe7b0551fad17cb64aebebdd4c898f6 WHIRLPOOL 613c1dd125e357093438ae797ca3f2f98fe8bc83e836a0eef1ac588173c5c0e6f1efbac8a3014e5a9c832e9cfbac0896c9699fb569cbac2cf980d189e9a4b6d0
+DIST genpatches-3.6-4.extras.tar.bz2 17029 SHA256 7e22574a6618fbb2eade0610fd130a06a322891f109d5ad79b1b8674da5321c8 SHA512 243ac5d7b78e0e308cfb5536439eb6da01f46bebc1a549c61eb9cb0b1199ccabfad2a7d6186a3b1387417dc40082fc931d37d07ed31bb0e78a0e9afc0e4bf655 WHIRLPOOL 71f32176b12b1b08450854afc52e603ba687628a21d18b1ffb83063cd5db159e53b729901085b57dd969fcf731f3ebdb191a1015c6c98bb1a6015f965d23e543
 DIST linux-3.6.tar.bz2 82296001 SHA256 88ae0a20fd39ecae79db0ce8f9397922fae33c8b06a54ed2c883c861126c9771 SHA512 cbaefc2c4c8ab2251c3345b7b2c88d55a49e3468d8b177b05dd6d96a802efa9a052b1a1ecab8b71298bac97f45259516d88253838332b4fdb4307780ebcddce9 WHIRLPOOL e17e3800951f0c3af21015d1a1c99698d0ef70815bd4f131dd60b30baef70d4c255988857533a9a7c058388c2febfcf02d12cde2a7ed46b24fa85aeb260c0251
 EBUILD lh-sources-3.6.1.ebuild 1655 SHA256 0565a12537fef87dace6c98616b8162acdba434e8b5cb0de835d589f02ed0632 SHA512 c96a1af8f2e63f083014159f2ab31178aff671e5728c5de02808c7859a0da81027f7a9836f80009e55a028ef8cf403eb2c6a6143d7d7065a0355dfe3ca40f779 WHIRLPOOL 30e72fdf7af9ef91bbc310f3f6baffd80203a6cf89b55bf615d262df13c54e258854eddfae32db78da08a4b7a8d701a0c2cc2457a73a0896f9f9aa7518065fec
-MISC ChangeLog 458 SHA256 fe83f2143cc6e1d0e07c89de701785052a59bf0b05212d4107f7bf27db2ac551 SHA512 9e68959dcca4c6b0584f92161a9042a3fd348bde6da86a3eb2b5c8062fec43d6648eca49184a0f892de4240335a5a8a4f900e9eb0ba3736bd759e7ced1511418 WHIRLPOOL 188a5ff0d695781de070fc34e28d284d639101f51440b7e6480db19b5195f8ebbce7534953f182569317e6bdcc40dbea9e618a345f3c2eaf55a0a5a7131be892
+EBUILD lh-sources-3.6.2.ebuild 1655 SHA256 4abd23d7377f2f405e518f0ae18d8764d998dc42eb2d4a6e5794935672237b31 SHA512 bb80d637bc0393794b20b849ef2ccb14bf0411268fc7933eec4b6306dbe6c16f9e68522b63b18f2b062f2b9dd12f9890dc68f0a65da21c4ef942f7384f38eab1 WHIRLPOOL 83b4b9218e52c101bdb50c50798d6f575c3727b75d9a8369c575439ff722dfcc54b871b58f3b7ba3dad3936c49a44a5f3949745c84a677fde9ca23dc748f5fbb
+MISC ChangeLog 580 SHA256 3092c4c244bca857dff929c8152f8dfb4dddc5c8c3f51a1d3e5a8a07c2ee06a7 SHA512 867d4fb2033fc9b920077a3de48240e9a439f44e898497befee1a9ced3ababd07848dc7fdfdf68b88ac169d629ff8a2eb26a232822dec1884edaffb537af96ef WHIRLPOOL f8224ff3051ff2a2e369026a1332bf6af94e44f778eaec3660eae2e2ea7a91fe91314729734492a0e7a8e3c0ff872f5ae2bbc78c43bc8b24cf3cbd8fa5be59d7
 MISC metadata.xml 458 SHA256 7e2d0354e199ee4243d8396496ef574368ceac66d2e91b949a3dad509031d347 SHA512 3235e64018277eaffb7fa97ff15a3797da3e5f8218c03d52ad33ae8c5fdb5f583e549ed8f3043b43ea8e222570fca0c44ffcf0b97ab03a5e8eb9631a5600fad2 WHIRLPOOL c0b6c201d4d23c99ae87ccfd758a365ebec7c1de31c47d4fe84cd5cf5d15dc32691bc65a3c78c202003882214f626af574014af3179a3ea637f4b4af9d0b30ee
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 Comment: GPGTools - http://gpgtools.org
 
-iEYEAREIAAYFAlB20RwACgkQgAnW8HDreRbmPQCfXlF1paj/DW37qcw8e/ejDSvm
-+AIAn1TF6fwAH4sFu03GMTohPJc7i/TC
-=Fres
+iEYEAREIAAYFAlB6k0UACgkQgAnW8HDreRaMWQCffGvwnIHLOidopHzkUMahW8k2
+lgkAn2JGv5v9l+m0McmRjAvUCZVTpYuJ
+=6Mbn
 -----END PGP SIGNATURE-----
